lang/macro/tests/ui/contract/fail/37-invalid-item-in-interface.stderr
error: only `struct`, `extern` blocks or `use` statements are allowed in interface
 --> $DIR/37-invalid-item-in-interface.rs:9:5
  |
9 |     pub fn baz() {}
  |     ^^^^^^^^^^^^^^^
